--- a/occupancy_map_generator/CMakeLists.txt
+++ b/occupancy_map_generator/CMakeLists.txt
@@ -116,7 +116,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+include
   ${catkin_INCLUDE_DIRS}
 )
 
@@ -133,7 +133,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(occu_map_generator src/occu_map_generator.cpp)
+add_executable(occu_map_generator src/occu_map_generator.cpp src/mapSpoof.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
